--- a/src/styles/Page1.css
+++ b/src/styles/Page1.css
@@ -3,14 +3,11 @@ body {
   background: linear-gradient(to bottom, #132D46, #191E29);
   height: 100vh;
   color: #ffffff;
-  margin: 0; 
-  position: relative;
 }
 
 .age {
   display: flex;
   justify-content: center;
-  margin-bottom: 2vh;
 }
 
 .progress {
@@ -47,19 +44,22 @@ body {
 .age-buttons {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 15px; 
-  margin-bottom: 20px;
+  gap: 30px; 
+  margin-bottom: 25px;
 }
 
 .age-button {
   background-color: #696E79; 
   color: #fff;
   border: none; 
-  border-radius: 10px; 
-  padding: 15px; 
-  font-size: 1.2em; 
+  border-radius: 20px; /* Increased border-radius */
+  padding-left: 55px;
+  padding-right: 55px;
+  padding-top: 25px;
+  padding-bottom: 25px;
+  font-size: 1.4em; 
   cursor: pointer;
-  transition: background-color 0.3s, transform 0.2s; 
+  transition: background-color 0.3s, transform 0.2s, box-shadow 0.3s; 
   text-align: center;
 }
 
@@ -67,19 +67,30 @@ body {
   background-color: #01C38D; 
 }
 
+.age-button:hover {
+  transform: scale(1.05);
+  background-color: #01C38D;
+  box-shadow: 0 0 10px rgba(1, 195, 141, 0.6);
+}
+
+.age-button:active {
+  transform: scale(0.95);
+}
+
 .navigation-buttons {
   display: flex;
   justify-content: center;
-  margin-top: 50px;
-  gap: 10px;
+  margin-top: 60px; 
+  gap: 15px; 
 }
 
 .nav-button {
   background-color: transparent;
-  color: #fff;
+  color: #01C38D;
   border: none; 
-  border-radius: 5px;
-  padding: 10px 20px;
+  border-radius: 20px; /* Increased border-radius */
+  padding: 15px 25px; 
+  font-size: 1.2em; 
   cursor: pointer;
   transition: background-color 0.3s, transform 0.2s; 
 }
@@ -89,12 +100,23 @@ body {
   color: #fff;
 }
 
+.nav-button.next-button:hover {
+  background-color: #01C38D;
+  transform: scale(1.1); 
+}
+
 .nav-button:hover {
-  background-color: #01A376;
+  background-color: #fff;
+  transform: scale(1.1); 
 }
 
 .nav-button:active {
   transform: scale(0.95); 
+}
+
+.nav-button.previous,
+.nav-button.skip {
+  color: #adff2f; 
 }
 
 .info-button {
@@ -110,13 +132,14 @@ body {
   justify-content: center;
   cursor: pointer;
   position: absolute;
-  top: 20px;
-  left: 20px;
+  top: 80px;
+  left: 200px;
   transition: background-color 0.3s, transform 0.2s;
 }
 
 .info-button:hover {
   background-color: #555; 
+  transform: scale(1.1); 
 }
 
 .info-button:active {
@@ -133,8 +156,8 @@ body {
   align-items: center;
   cursor: pointer;
   position: absolute;
-  top: 20px;
-  right: 20px;
+  top: 80px; 
+  right: 200px; 
   transition: transform 0.2s; 
 }
 
@@ -153,46 +176,46 @@ body {
 }
 
 .footer {
-  position: absolute;
-  bottom: 10px; 
-  left: 50%; 
-  transform: translateX(-50%); 
+  display: flex;
+  justify-content: center;
+  margin-top: 30px;
 }
-
 
 @media (max-width: 768px) {
   .age-button {
-    padding: 12px; 
-    font-size: 1em; 
+    padding: 16px; 
+    font-size: 1.1em; 
   }
 
   .nav-button {
-    padding: 8px 16px; 
+    padding: 12px 20px; 
+    font-size: 1.1em; 
   }
 
   .info-button {
     width: 30px;
     height: 30px;
     font-size: 20px; 
-    top: 15px; 
-    left: 15px;
+    top: 10px; 
+    left: 10px; 
   }
 
   .home-button {
     font-size: 14px; 
-    top: 15px; 
-    right: 15px;
+    top: 10px; 
+    right: 10px;
   }
 }
 
 @media (max-width: 480px) {
   .age-button {
-    padding: 10px; 
-    font-size: 0.9em; 
+    padding: 14px; 
+    font-size: 1em;
   }
 
   .nav-button {
-    padding: 6px 12px; 
+    padding: 10px 18px; 
+    font-size: 1em; 
   }
 
   .info-button {
