--- a/src/styles/Page3.css
+++ b/src/styles/Page3.css
@@ -1,281 +1,32 @@
-@keyframes fillColor {
-  from {
-    background-position: 0% 0%;
-  }
-  to {
-    background-position: 100% 0%;
-  }
-}
-
-body {
-  font-family: Arial, sans-serif;
-  background-color: #0e1e2b;
-  height: 100vh;
-  color: #ffffff;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.question {
-  font-size: 1vw; /* vw 단위로 폰트 크기 설정 */
-  font-weight: bold;
-  text-align: center;
-  margin-bottom: 1vh; /* 질문과 진행 상태 바 사이의 간격 조절 */
-}
-
-.progress {
-  display: flex;
-  justify-content: center;
-  align-items: center; /* 세로 정렬 추가 */
-  margin-top: 30px;
-  margin-bottom: 50px;
-  text-align: center;
-  font-size: 1.2em; 
-}
-
-.progress-step {
-  width: 40px; /* 피그마에서 제시된 크기 */
-  height: 40px; /* 피그마에서 제시된 크기 */
-  border-radius: 50%;
-  background-color: #696E79; /* 기본 비활성 색상 */
-  margin: 0 35px;
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center; /* 숫자 중앙 정렬을 위한 flexbox 설정 */
-}
-
-.progress-step.active {
-  background-color: #01C38D;
-  box-shadow: 0 0 10px rgba(1, 195, 141, 0.6);
-}
-
-.progress-step:not(:last-child)::after {
-  content: '';
-  position: absolute;
-  top: 50%;
-  right: -75px; /* 원과 선 사이의 간격 조절 */
-  width: 80px; /* 선의 길이 */
-  height: 12px; /* 선의 두께 */
-  background-color: #696E79; /* 기본 선 색상 */
-  transform: translateY(-50%); /* 세로 중앙 정렬 */
-}
-
-.progress-step.active:not(:last-child)::after {
-  background: linear-gradient(to right, #01C38D 0%, #01C38D 100%);
-  background-size: 200% 100%;
-  animation: fillColor 1s forwards;
-  box-shadow: 0 0 10px rgba(1, 195, 141, 0.6);
-}
-
-.progress-step:not(.active)::after {
-  background-color: #696E79; /* 비활성 단계의 선 색상 */
-}
-
-.progress-step:last-child::after {
-  background-color: transparent; /* 마지막 단계의 선 색상 없음 */
-}
-
-.progress-step .step-number {
-  font-family: 'Inter', sans-serif;
-  font-style: normal;
-  font-weight: 900;
-  font-size: 16px; /* 숫자 크기 조정 */
-  line-height: 40px; /* 숫자를 세로 중앙 정렬 */
-  text-align: center;
-  color: #FFFFFF; /* 기본 텍스트 색상 */
-}
-
-.progress-step:not(.active) .step-number {
-  color: #8C8C8C; /* 비활성 상태의 텍스트 색상 */
-}
-
-.part-buttons {
+.sub-part-buttons {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 30px; 
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); /* Adjusted for responsiveness */
+  gap: 30px;
   margin-bottom: 25px;
 }
 
-.part-button {
-  background-color: #696E79; 
+.sub-part-button {
+  background-color: #696E79;
   color: #fff;
-  border: none; 
-  border-radius: 20px; /* Increased border-radius */
-  padding-left: 55px;
-  padding-right: 55px;
-  padding-top: 25px;
-  padding-bottom: 25px;
-  font-size: 1.4em; 
+  border: none;
+  border-radius: 20px;
+  padding: 25px 55px;
+  font-size: 1.4em;
   cursor: pointer;
-  transition: background-color 0.3s, transform 0.2s, box-shadow 0.3s; 
+  transition: background-color 0.3s, transform 0.2s, box-shadow 0.3s;
   text-align: center;
 }
 
-.part-button.selected {
-  background-color: #01C38D; 
+.sub-part-button.selected {
+  background-color: #01C38D;
 }
 
-.part-button:hover {
+.sub-part-button:hover {
   transform: scale(1.05);
   background-color: #01C38D;
   box-shadow: 0 0 10px rgba(1, 195, 141, 0.6);
 }
 
-.part-button:active {
+.sub-part-button:active {
   transform: scale(0.95);
-}
-
-.navigation-buttons {
-  display: flex;
-  justify-content: center;
-  margin-top: 60px; 
-  gap: 15px; 
-}
-
-.nav-button {
-  background-color: transparent;
-  color: #01C38D;
-  border: none; 
-  border-radius: 15px; /* 피그마 디자인에 맞게 수정 */
-  padding: 15px 25px; 
-  font-family: 'Inter', sans-serif; /* 폰트 추가 */
-  font-weight: 700; /* 굵게 설정 */
-  font-size: 20px; /* 피그마에서 제시된 크기 */
-  line-height: 24px; /* 피그마에서 제시된 줄 높이 */
-  text-align: center; /* 텍스트 중앙 정렬 */
-  cursor: pointer;
-  transition: background-color 0.3s, transform 0.2s; 
-  position: relative; /* 위치 조정 */
-}
-
-.nav-button.next-button {
-  background-color: #01C38D;
-  color: #fff;
-}
-
-.nav-button.next-button:hover {
-  transform: scale(1.05);
-  background-color: #01C38D;
-  box-shadow: 0 0 10px rgba(1, 195, 141, 0.6); 
-}
-
-.nav-button:hover {
-  background-color: #fff;
-}
-
-.nav-button:active {
-  transform: scale(0.95); 
-}
-
-.nav-button.previous,
-.nav-button.skip {
-  color: #adff2f; 
-}
-
-/* 추가적인 스타일 */
-.nav-button.previous {
-  width: 95px; /* 피그마에서 제시된 크기 */
-  height: 26px; /* 피그마에서 제시된 크기 */
-}
-
-.nav-button.skip {
-  width: 95px; /* 피그마에서 제시된 크기 */
-  height: 26px; /* 피그마에서 제시된 크기 */
-}
-
-
-.logo {
-  width: 70px;
-  height: 70px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: absolute;
-  top: 80px;
-  left: 200px;
-}
-
-.home-button {
-  background: none;
-  border: none;
-  color: #fff;
-  font-size: 16px;
-  display: flex;
-  align-items: center;
-  cursor: pointer;
-  position: absolute;
-  top: 80px; 
-  right: 200px; 
-  transition: transform 0.2s; 
-}
-
-.home-button:hover {
-  transform: scale(1.1); 
-}
-
-.home-button:active {
-  transform: scale(0.95); 
-}
-
-.home-logo {
-  width: 15px;
-  height: 15px;
-  margin-right: 8px;
-}
-
-.footer {
-  display: flex;
-  justify-content: center;
-  margin-top: 30px;
-}
-
-@media (max-width: 768px) {
-  .age-button {
-    padding: 16px; 
-    font-size: 1.1em; 
-  }
-
-  .nav-button {
-    padding: 12px 20px; 
-    font-size: 1.1em; 
-  }
-
-  .info-button {
-    width: 30px;
-    height: 30px;
-    font-size: 20px; 
-    top: 10px; 
-    left: 10px; 
-  }
-
-  .home-button {
-    font-size: 14px; 
-    top: 10px; 
-    right: 10px;
-  }
-}
-
-@media (max-width: 480px) {
-  .age-button {
-    padding: 14px; 
-    font-size: 1em;
-  }
-
-  .nav-button {
-    padding: 10px 18px; 
-    font-size: 1em; 
-  }
-
-  .info-button {
-    width: 25px;
-    height: 25px;
-    font-size: 18px;
-  }
-
-  .home-button {
-    font-size: 12px;
-  }
 }
